Modify site configuration for homepage updates
Updated site title and description, and changed theme.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-title: AI Zettelkasten
-description: Public Obsidian-style notes mirrored from Quartz
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
+title: Tharaka's homepage
+description: Bookmark this to keep an eye on my project updates!
 markdown: kramdown
 exclude:
   - scripts
   - content
+
+
